--- a/src/app/pages/user-management/country-setup/country-setup-edit/country-setup-edit.component.html
+++ b/src/app/pages/user-management/country-setup/country-setup-edit/country-setup-edit.component.html
@@ -183,6 +183,9 @@
                         <mat-error *ngIf="item.controls['version_message'].hasError('required') && item.controls['version_message'].touched ">
                           Message {{ ls.locale.global.messages.mandatory_text }}.
                         </mat-error>
+                        <mat-error *ngIf="item.controls['version_message'].hasError('maxLength') && item.controls['version_message'].touched">
+                        Isi Pesan Notifikasi maksimal 150 karakter
+                      </mat-error>
                     </mat-form-field>
                     <mat-form-field fxFlex="100" class="is-light" *ngIf="item.get('force_logout_status').value ">
                       <mat-select placeholder="{{ ls.locale.pengaturan.force_update_apps.text13 }}" formControlName="apk_type">
