--- a/src/app/pages/user-management/country-setup/country-setup-create/country-setup-create.component.html
+++ b/src/app/pages/user-management/country-setup/country-setup-create/country-setup-create.component.html
@@ -303,9 +303,9 @@
               <div fxFlex="100" fxLayoutAlign="space-between">
                 <label for="" matTooltip="By enabling this featuere will disable below versions "
                 style="cursor: pointer;min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;">Enable Force Logout</label>
-                <mat-slide-toggle class="example-margin" [color]="'primary'" formControlName="force_logout"></mat-slide-toggle>
+                <mat-slide-toggle class="example-margin" [color]="'primary'" formControlName="force_logout_status"></mat-slide-toggle>
               </div>
-              <ng-container  *ngIf = "step9.get('force_logout').value == false" >
+              <ng-container  *ngIf = "step9.get('force_logout_status').value == false" >
                 <mat-form-field fxFlex="100" class="is-light" disabled >
                   <input matInput type="number" placeholder="Version Number" formControlName="version_number" disabled class="field-disabled">
                   <mat-error *ngIf="step9.controls['version_number'].hasError('required') && step9.controls['version_number'].touched ">
@@ -318,17 +318,35 @@
                     Version {{ls.locale.global.messages.mandatory_text}}
                   </mat-error>
                 </mat-form-field>
+                <mat-form-field fxFlex="100" class="is-light" disabled class="field-disabled">
+                  <mat-select placeholder="{{ ls.locale.pengaturan.force_update_apps.text13 }}" formControlName="apk_type">
+                    <mat-option *ngFor="let item of listApps" [value]="item.value">{{item.name}}</mat-option>
+                  </mat-select>
+                  <!-- <mat-error
+                    *ngIf="item.controls['apk_type'].hasError('required') && item.controls['apk_type'].touched">
+                    {{ ls.locale.pengaturan.force_update_apps.text13 }} {{ ls.locale.global.messages.mandatory_text }}
+                  </mat-error> -->
+                </mat-form-field>
               </ng-container>
-              <mat-form-field fxFlex="100" class="is-light" *ngIf="step9.get('force_logout').value">
+              <mat-form-field fxFlex="100" class="is-light" *ngIf="step9.get('force_logout_status').value">
                 <input matInput type="number" placeholder="Version Number" formControlName="version_number">
                 <mat-error *ngIf="step9.controls['version_number'].hasError('required') && step9.controls['version_number'].touched ">
                   Version {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
               </mat-form-field>
-              <mat-form-field fxFlex="100" class="is-light" *ngIf="step9.get('force_logout').value">
+              <mat-form-field fxFlex="100" class="is-light" *ngIf="step9.get('force_logout_status').value">
                 <input matInput type="text" placeholder="Message to Display" formControlName="version_message">
                 <mat-error *ngIf="step9.controls['version_message'].hasError('required') && step9.controls['version_message'].touched ">
                   Version {{ls.locale.global.messages.mandatory_text}}
+                </mat-error>
+              </mat-form-field>
+              <mat-form-field fxFlex="100" class="is-light" *ngIf="step9.get('force_logout_status').value ">
+                <mat-select placeholder="{{ ls.locale.pengaturan.force_update_apps.text13 }}" formControlName="apk_type">
+                  <mat-option *ngFor="let item of listApps" [value]="item.value">{{item.name}}</mat-option>
+                </mat-select>
+                <mat-error
+                  *ngIf="step9.controls['apk_type'].hasError('required') && step9.controls['apk_type'].touched">
+                  {{ ls.locale.pengaturan.force_update_apps.text13 }} {{ ls.locale.global.messages.mandatory_text }}
                 </mat-error>
               </mat-form-field>
             </div>
