--- a/src/app/pages/user-management/country-setup/country-setup-create/country-setup-create.component.html
+++ b/src/app/pages/user-management/country-setup/country-setup-create/country-setup-create.component.html
@@ -338,13 +338,13 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light" *ngIf="step9.get('force_logout_status').value">
-                <input matInput type="number" placeholder="Version Number" formControlName="version_number">
+                <input matInput type="number" placeholder="{{ ls.locale.pengaturan.force_update_apps.text5 }}" formControlName="version_number">
                 <mat-error *ngIf="step9.controls['version_number'].hasError('required') && step9.controls['version_number'].touched ">
                   Version {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light" *ngIf="step9.get('force_logout_status').value">
-                <input matInput type="text" placeholder="Message to Display" formControlName="version_message">
+                <input matInput type="text" placeholder="{{ ls.locale.pengaturan.force_update_apps.text8 }}" formControlName="version_message">
                 <mat-error *ngIf="step9.controls['version_message'].hasError('required') && step9.controls['version_message'].touched ">
                   Version {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
