remove FF column, add type/classification column

--- a/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.html
+++ b/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.html
@@ -46,7 +46,8 @@
 
         <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="business_name"></ngx-datatable-column>
         <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="business_code"></ngx-datatable-column>
-        <ngx-datatable-column name="{{'global.label.type' | translate}}" prop="business_classification"></ngx-datatable-column>
+        <ngx-datatable-column name="{{'global.label.type' | translate}}" prop="business_type"></ngx-datatable-column>
+        <ngx-datatable-column name="{{'global.label.classification' | translate}}" prop="business_classification"></ngx-datatable-column>
         <ngx-datatable-column name="{{'dte.audience.text16' | translate}}" prop="business_is_registered"></ngx-datatable-column>
         <ngx-datatable-column name="{{ls.locale.global.messages.invalid_reason}}" prop="message">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
