Updated 5152 fe changes
Updated 5152 fe changes

--- a/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
+++ b/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
@@ -5,7 +5,7 @@
 
   <div class='p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
     <div class="button-row">
-      <button mat-flat-button style="width: 160px" color="white" (click)="importRedeem()">
+      <button mat-flat-button style="width: 160px" color="white" (click)="importRedeem()" disabled>
         <mat-icon>vertical_align_bottom</mat-icon> Import XLS
       </button>
     </div>
