fix trs proposal executor

--- a/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-product.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-product.component.html
@@ -38,13 +38,13 @@
 
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="code" prop="code">
+        <ngx-datatable-column name="Code" prop="code">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.code}}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="name" prop="name">
+        <ngx-datatable-column name="Name" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.name}}
           </ng-template>
