--- a/src/app/pages/tactical-retail-sales/trs-proposal/index/trs-proposal.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/index/trs-proposal.component.html
@@ -180,7 +180,7 @@
               <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="goEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="" (click)="getDetailOrder(row.id)">
+              <button mat-icon-button color="" (click)="getDetailOrder(row.program_code)">
                 <mat-icon class="secondary-text">assignment</mat-icon>
               </button>
             </div>
