Added check to fetch both get and post methods using export xls
Added check to fetch both get and post methods using export xls b2bvoucher payment

--- a/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
+++ b/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
@@ -14,6 +14,11 @@
         <mat-icon>vertical_align_top</mat-icon> Export XLS
       </button>
     </div>
+    <div class="button-row">
+      <button mat-flat-button style="width: 160px" color="white" (click)="getexportRedeem()">
+        <mat-icon>vertical_align_top</mat-icon> Get Export XLS
+      </button>
+    </div>
   </div>
 
   <!-- <h4 style="text-align: center;">Page Under Construction!</h4> -->
